--- a/index.css
+++ b/index.css
@@ -2,3 +2,10 @@ body {
 	display: grid;
 	grid-template-columns: 2fr 8fr
 }
+
+li:hover {
+	border: 1px solid black;
+	padding: 10px;
+	background: black;
+	color: white;
+}
